--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
      </div>
 
     <div class="container">
-     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+     <div id="carouselExampleIndicators" class="carousel slide slide-bg" data-bs-ride="true">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -47,9 +47,12 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <div class="row">
+              <div class="row align-items-center">
                <div class="col-md-7">
-
+                    <h1>Booster Headphones</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium maxime mollitia perspiciatis modi beatae cum possimus amet sapiente quas. Debitis quas quibusdam non ratione labore?</p>
+                    <h1>$60</h1>
+                    <button type="button" class="btn btn-success buy-now">Buy Now</button>
                </div>
                <div class="col-md-5">
                     <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -57,9 +60,12 @@
               </div>
             </div>
             <div class="carousel-item">
-              <div class="row">
+              <div class="row align-items-center">
                <div class="col-md-7">
-
+                    <h1>Large LED Television</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, esse. Ducimus sequi aspernatur totam ullam facere. Autem excepturi accusamus laborum fuga iure architecto accusantium quibusdam!</p>
+                    <h1>$120</h1>
+                    <button type="button" class="btn btn-success buy-now">Buy Now</button>
                </div>
                <div class="col-md-5">
                     <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -67,9 +73,12 @@
               </div>
             </div>
             <div class="carousel-item">
-              <div class="row">
+              <div class="row align-items-center">
                <div class="col-md-7">
-
+                    <h1>Xbox Clone</h1>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, maxime aliquam? Iure odio, atque eligendi porro odit reprehenderit? Deserunt, earum incidunt voluptates voluptatem eveniet veritatis!</p>
+                    <h1>$80</h1>
+                    <button type="button" class="btn btn-success buy-now">Buy Now</button>
                </div>
                <div class="col-md-5">
                     <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
