--- a/index.html
+++ b/index.html
@@ -97,6 +97,128 @@
         </div>
     </div>
 
+    <div class="container categories">
+      <div class="row align-items-center">
+          <div class="col-md-4">
+                <div class="cat1 d-flex justify-content-between align-items-center">
+                    <h1>Watch</h1>
+                    <img src="images/categories/watch.png" alt="">
+                    </div>
+          </div>
+          <div class="col-md-4">
+               <div class="cat2 d-flex justify-content-between align-items-center">
+                    <h1>Bag</h1>
+                    <img src="images/categories/bag.png" alt="">
+               </div>
+          </div>
+          <div class="col-md-4">
+               <div class="cat3 d-flex justify-content-between align-items-center">
+                    <h1>Shoes</h1>
+                    <img src="images/categories/shoes.png" alt="">
+               </div>
+          </div>
+      </div>
+    </div>
+    <div class="container shoes" id="shoes">
+     <h1>Shoes</h1>
+     <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card h-100">
+              <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Nike Ragnor</h5>
+                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel voluptates, quos beatae sapiente cum eius dolorum nam voluptatem modi optio pariatur quis consequatur incidunt, consequuntur excepturi iure id dicta facere?</p>
+                <h5>$120</h5>
+                <button type="button" class="btn btn-primary">Buy Now!!</button>
+              </div>  
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, dolores. Aspernatur recusandae nesciunt voluptatibus quod dolor voluptates dolorem quos adipisci commodi, repellat iusto mollitia dignissimos, minus, provident tempora pariatur vel.</p>
+                <h5>$220</h5>
+                <button type="button" class="btn btn-primary">Buy Now!!</button>
+              </div> 
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Nike 350</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas nihil eaque autem dicta error odio aperiam! Voluptates inventore nisi aliquid exercitationem debitis non nesciunt facere nihil impedit laudantium, tempora sequi.</p>
+                <h5>$150</h5>
+                <button type="button" class="btn btn-primary">Buy Now!!</button>
+              </div>
+              
+            </div>
+          </div>
+        </div>
+    </div>
+
+    <div class="container backpack" id="backpack">
+     <h1>Backpack</h1>
+     <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card h-100">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Spancer</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+                <h5>$140</h5>
+                <button type="button" class="btn btn-primary">Buy Now!!</button>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted"></small>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">leopard</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h5>$140</h5>
+                <button type="button" class="btn btn-primary">Buy Now!!</button>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted"></small>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100">
+              <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Fastrack</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content..</p>
+                <h5>$140</h5>
+                <button type="button" class="btn btn-primary">Buy Now!!</button>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted"></small>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+    <div class="container slide-bg d-flex justify-content-center align-items-center" id="subscribe">
+     <div>
+          <h3>LET'S STAY CLOSE</h3>
+          <h5>Get latest updates and more !!</h5>
+          <input class="form-control" type="text">
+          <button class="btn btn-primary">Submit</button>
+     </div>
+    </div>
+
+    <footer>
+     <small>&copy Rej's Shop. All rights reserved Heartzbite Inc.</small>
+    </footer>
+
 
      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
